plugin+commons+server: process-probe GC/JVM tuning signals (065)
Typed-allowlist extraction over the jinfo -flags line plan 029 already
fetches (no new subprocess): ProcessInfo gains pid / gcCollector (new
GcCollector enum, honest UNKNOWN) / compactObjectHeaders; EnvironmentInfo
gains plaintext workersMax (the salted gradle.maxWorkers fingerprint
stays). pid supersedes plan 029's "no PID" — decision-log row + doc
comments updated; it is a within-one-hostnameHash correlation key only.
Extraction returns enums/bools/ints exclusively, so the -Dtoken=/path/
classpath content in the same jinfo line is discarded by construction
(unit-pinned leak test, the plan-051 allowlist discipline incl. its
widening warning).

Server: pure DaemonTuningCandidates (GC-pressure >= 0.15 lifetime
fraction with a guarded pid-delta refinement, Kotlin pinned-Xmx >= 0.9,
ParallelGC-vs-G1 suggestion, JEP-519 compact headers on JDK 24+/high
rss) rides /diagnosis as an additive tuningCandidates field; the
dashboard detailView and the zero-network HTML artifact mirror the
primary-input rules client-side. The toolchain rollup's jdk dimension
groups by JDK major with durationP50Ms (existing duration_ms hot
column — no migration); benchmarkSeries slices by workersMax (bound
param, both stores byte-parity via Testcontainers).

New golden build-payload-v1-process-tuning.json; existing goldens
untouched; schemaVersion stays 1. Plan file gains implementation notes
(diagnosis-route consumer + pid-delta scope — the artifact cannot call
a server evaluator, locked decision #4).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>