@@ -1,5 +1,6 @@
 package dev.buildhound.gradle
 
+import dev.buildhound.commons.payload.GcCollector
 import dev.buildhound.commons.payload.ProcessRole
 import kotlin.test.Test
 import kotlin.test.assertEquals
@@ -111,5 +112,71 @@ class ProcessParsingTest {
     fun `a malformed jstat output parses to an empty map`() {
         assertEquals(emptyMap(), ProcessParsing.parseJstat("only-a-header-no-values"))
         assertNull(ProcessParsing.heapUsedMb(ProcessParsing.parseJstat("")))
+    }
+
+    // ---- Plan 065: typed-allowlist GC/JVM tuning-flag extraction over the jinfo -flags line ----
+
+    /** A realistic JDK-21 `jinfo -flags` output: header lines, dozens of flags, one collector. */
+    private val realisticJinfo =
+        "VM Flags:\n" +
+            "-XX:CICompilerCount=4 -XX:ConcGCThreads=2 -XX:G1ConcRefinementThreads=8 " +
+            "-XX:G1HeapRegionSize=2097152 -XX:GCDrainStackTargetSize=64 -XX:InitialHeapSize=268435456 " +
+            "-XX:MarkStackSize=4194304 -XX:MaxHeapSize=4294967296 -XX:MaxMetaspaceSize=536870912 " +
+            "-XX:MaxNewSize=2576351232 -XX:MinHeapDeltaBytes=2097152 -XX:MinHeapSize=8388608 " +
+            "-XX:NonNMethodCodeHeapSize=5839372 -XX:ReservedCodeCacheSize=251658240 " +
+            "-XX:+SegmentedCodeCache -XX:SoftMaxHeapSize=4294967296 -XX:-THPStackMitigation " +
+            "-XX:+UseCompressedOops -XX:+UseG1GC -XX:+UseNUMA -XX:+UseNUMAInterleaving"
+
+    @Test
+    fun `the collector is picked from a realistic jinfo flags line`() {
+        assertEquals(GcCollector.G1, ProcessParsing.parseGcCollector(realisticJinfo))
+        assertEquals(
+            GcCollector.PARALLEL,
+            ProcessParsing.parseGcCollector("-XX:MaxHeapSize=1073741824 -XX:+UseParallelGC -XX:+UseNUMA"),
+        )
+        assertEquals(GcCollector.ZGC, ProcessParsing.parseGcCollector("-XX:+UseZGC -XX:+ZGenerational"))
+        assertEquals(GcCollector.SERIAL, ProcessParsing.parseGcCollector("-XX:+UseSerialGC"))
+        assertEquals(GcCollector.SHENANDOAH, ProcessParsing.parseGcCollector("-XX:+UseShenandoahGC"))
+        assertEquals(GcCollector.EPSILON, ProcessParsing.parseGcCollector("-XX:+UseEpsilonGC"))
+    }
+
+    @Test
+    fun `an unknown enabled collector is honest UNKNOWN and no collector flag at all is null`() {
+        // A future JDK's collector the allowlist doesn't know → UNKNOWN, never a guessed name.
+        assertEquals(GcCollector.UNKNOWN, ProcessParsing.parseGcCollector("-XX:MaxHeapSize=1073741824 -XX:+UseFancyNewGC"))
+        // No collector-selection flag printed → null.
+        assertNull(ProcessParsing.parseGcCollector("VM Flags:\n-XX:CICompilerCount=4 -XX:MaxHeapSize=1073741824"))
+        // A DISABLED collector flag never counts as a selection.
+        assertNull(ProcessParsing.parseGcCollector("-XX:-UseParallelGC"))
+        // Known Use…SystemGC tuning flags are not collectors — excluded from the UNKNOWN fallback.
+        assertNull(ProcessParsing.parseGcCollector("-XX:+UseMaximumCompactionOnSystemGC"))
+    }
+
+    @Test
+    fun `compact object headers reads plus as true, minus as false, absent as null`() {
+        assertEquals(true, ProcessParsing.parseCompactObjectHeaders("-XX:+UseCompactObjectHeaders -XX:+UseG1GC"))
+        assertEquals(false, ProcessParsing.parseCompactObjectHeaders("-XX:-UseCompactObjectHeaders -XX:+UseG1GC"))
+        assertNull(ProcessParsing.parseCompactObjectHeaders(realisticJinfo))
+    }
+
+    @Test
+    fun `a hostile jinfo line yields ONLY the typed allowlisted fields — leak-proof by construction`() {
+        // jinfo also prints -D args and the classpath: secrets and absolute paths ride in the same
+        // string the allowlist reads. The three extractions are enum/bool/long — no string output
+        // exists, so nothing scrubbable can leak (the reason plan 029 rejected a jvmargs summary).
+        val hostile =
+            "VM Flags:\n" +
+                "-XX:MaxHeapSize=2147483648 -XX:+UseG1GC -XX:-UseCompactObjectHeaders " +
+                "-Dtoken=super-secret-value -Dapi.key=AKIA1234567890SECRET " +
+                "-cp /Users/jane/work/secret-project/classes:/opt/keys/creds.jar " +
+                "-javaagent:/home/jane/.tokens/agent.jar"
+        assertEquals(2048L, ProcessParsing.configuredXmxMb(hostile))
+        assertEquals(GcCollector.G1, ProcessParsing.parseGcCollector(hostile))
+        assertEquals(false, ProcessParsing.parseCompactObjectHeaders(hostile))
+        // And with no allowlisted flag present, the hostile remainder produces nothing at all.
+        val onlyHostile = "-Dtoken=super-secret-value -cp /Users/jane/secret/classes"
+        assertNull(ProcessParsing.configuredXmxMb(onlyHostile))
+        assertNull(ProcessParsing.parseGcCollector(onlyHostile))
+        assertNull(ProcessParsing.parseCompactObjectHeaders(onlyHostile))
     }
 }
